update snapshots, fix session overview button alignment

--- a/frontend/src/components/UserSessionsOverview/UserSessionsOverview.module.css
+++ b/frontend/src/components/UserSessionsOverview/UserSessionsOverview.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    align-items: flex-start;
     gap: var(--cpd-space-1x);
  }
 
